<resources>
    <string name="app_name">Covider</string>
    <string name="symptoms">Do you currently have any of the following symptoms?</string>
    <string name="symptom1">Chills or Fever of 100 degrees or higher</string>
    <string name="symptom2">Loss of Taste or Smell</string>
    <string name="symptom3">Muscle Soreness or Headaches or Fatigue</string>
    <string name="symptom4">Difficulty Breathing or Shortness of Breath</string>
    <string name="symptom5">Cough or Runny Nose or Sore Throat</string>
    <string name="symptom6">Conjunctivitis (inflammation of eye including redness, itching and tearing)</string>
    <string name="symptom7">GI symptoms such as Abdominal Pain or Diarrhea or Nausea or Vomiting</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="next">Next</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_questionaire">questionaire</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_building_question">buildingQuestion</string>
</resources>