<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="389dp"
            android:layout_height="860dp"

            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.863"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="108dp"
            android:layout_height="58dp"

            android:src="@drawable/usclogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.141"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.015" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="390dp"
            android:layout_height="48dp"
            android:textColor="@color/black"
            android:fontFamily="@font/alike"
            android:gravity="center"
            android:text="@string/symptom1"

            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.071" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="293dp"
            android:layout_height="58dp"

            android:fontFamily="@font/alike"
            android:gravity="center"
            android:text="Health Form"

            android:textColor="#A70014"
            android:textSize="33sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.906"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.015" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="385dp"
            android:layout_height="47dp"
            android:textColor="@color/black"
            android:fontFamily="@font/alike"
            android:gravity="center"
            android:text="@string/symptom2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="402dp"
            android:layout_height="46dp"
            android:text="@string/symptom3"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/alike"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.287" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="386dp"
            android:layout_height="56dp"
            android:text="@string/symptom5"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/alike"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.525" />

        <TextView
            android:id="@+id/conjunctTxt"
            android:layout_width="389dp"
            android:layout_height="77dp"
            android:fontFamily="@font/alike"
            android:gravity="center"
            android:text="@string/symptom6"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.318"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.663" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="391dp"
            android:layout_height="42dp"
            android:text="@string/symptom4"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/alike"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.408" />

        <Button
            android:id="@+id/btn1Yes"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.124"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn2Yes"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_marginEnd="240dp"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn5Yes"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_marginEnd="240dp"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.578"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn6Yes"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_marginEnd="240dp"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.732"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn4Yes"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_marginEnd="240dp"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.454"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn1No"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:text="@string/no"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.774"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn2No"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:text="@string/no"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.774"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn4No"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:text="@string/no"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.774"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.454"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn5No"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:text="@string/no"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.774"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.578"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn6No"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:text="@string/no"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.774"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.731"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="171dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/next"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.916"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.966"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn3Yes"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_marginEnd="240dp"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.335"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn3No"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:text="@string/no"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.774"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.335"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn7Yes"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_marginEnd="240dp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/yes"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.878"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn7No"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/no"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.774"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.878"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="385dp"
            android:layout_height="57dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="778dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="182dp"
            android:fontFamily="@font/alike"
            android:gravity="center"
            android:text="@string/symptom7"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.605" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>